# gravity-developer-mode-plugin

./: CMakeLists.txt  README.md
share/: com.ispirata.Hemera.DeviceInfo.json
src/: CMakeLists.txt  DeveloperModePlugin.cpp  DeveloperModePlugin.h  DeviceInfo.cpp  DeviceInfo.h
